# hidwaan

./: .gitignore  README.md  pyproject.toml
backend/fastapi/: pyproject.toml
backend/fastapi/src/hidwaan/: config.py  dependency.py  errors.py  models.py  server.py  service.py
backend/fastapi/src/hidwaan/routes/: web.py
backend/fastapi/src/hidwaan/static/: app.js
backend/fastapi/src/hidwaan/templates/: index.html  login.html
db/: 000_create_tables.sql  migrate.py
hidwaan/: config.py  server.py
hidwaan/static/: app.js
hidwaan/templates/: base.html  index.html
src/hidwaan/: database.py  dependency.py  models.py  queries.py  server.py
src/hidwaan/routes/: api.py  web.py
src/hidwaan/static/: app.js  style.css
src/hidwaan/templates/: base.html  chat.html  index.html  login.html  server_list.html
